--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
   "presets": [
-    "babel-preset-es2015",
-    "babel-preset-react",
-    "babel-preset-stage-0"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
-    "babel-plugin-transform-class-properties"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
