--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpackbin-project",
+  "name": "gdq-schedule",
   "version": "1.0.0",
-  "description": "Project boilerplate",
+  "description": "A re-imagined GDQ schedule viewer",
   "scripts": {
     "fetch-data": "node tools/fetch-data.js",
     "build": "NODE_ENV=production webpack",
@@ -13,25 +13,24 @@
     "moment": "^2.20.1",
     "normalize.css": "7.0.0",
     "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react-dom": "^16.12.0",
     "react-popover": "0.5.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "html-webpack-plugin": "2.22.0",
-    "jsdom": "^11.5.1",
-    "style-loader": "^0.13.0",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "2.3.0"
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-stage-0": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.3.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jsdom": "^15.2.1",
+    "style-loader": "^1.0.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
-  "author": "WebpackBin",
-  "license": "ISC"
+  "author": "xymostech <hi@xymoste.ch>",
+  "license": "MIT"
 }
